fixed issue of overlapping content with navbar

--- a/wheresmattat/wheresmattat.css
+++ b/wheresmattat/wheresmattat.css
@@ -4,6 +4,7 @@ html, body {
 
 body {
 	font-family: 'Nanum Gothic', sans-serif;
+	padding-top: 45px;
 }
 
 /*h1 {
